Fixed overflow of local client container

--- a/src/client/css/local.scss
+++ b/src/client/css/local.scss
@@ -1,5 +1,6 @@
 .client-container {
     border: 1px solid black;
+    overflow: auto;
 }
 
 .iphone6_P {
